# course

algorithms/: CMakeLists.txt
algorithms/src/: fast_math.h  max_sequence_array.h  ploynomial_algo.h  search_algo.h  sort_algo.h
algorithms/src/slam/: quaternion.h
algorithms/src/structure/: array_list.h  list.h  queue.h  simple_queue.h
algorithms/src/traits/: traits_demo.h
algorithms/test/: main.cpp  test_max_sequence.cpp  test_ploynomial.cpp  test_search_algos.cpp  test_sort_algos.cpp
algorithms/test/stucture/: test_list.cpp  test_queue.cpp  test_simple_queue.cpp
view_demo/: CMakeLists.txt
view_demo/src/: calibration_main.cpp
view_demo/src/activity/: calibration_activity.cpp  calibration_activity.h
view_demo/src/util/: file_util.cpp  file_util.h
view_demo/src/view/: base_activity.cpp  base_activity.h  image_activity.cpp  image_activity.h  label_view.cpp  label_view.h  view.cpp  view.h  view_def.h
